--- a/index.html
+++ b/index.html
@@ -1442,7 +1442,7 @@
            return false;
        });
    </script>
-
+<!--
    <script>
        let loadMoreBtn = document.querySelector('#Baton');
         let currentItem = 3;
@@ -1454,6 +1454,6 @@
             }
             currentItem += 3;
         }
-   </script>
+   </script>-->
 </body>
 </html>
