--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         
         <div class="text-center">
           <button class="btn  btn--sm" type="button" id="Baton">Загрузить больше работ</button> 
-          <!--<button class="log" type="button" id="Baton">Загрузить больше</button>-->
+
         </div>
 
     </div><!-- /.container -->
@@ -307,13 +307,13 @@
                 <h3 class="about__title">обо мне</h3>
                 <h2 class="about__bigtitle">КТО Я</h2>
                 <div class="about__text">
-                    <p> Привет! Меня зовут Рамазан мне 21 год. Проживаю я в городе Каспийск.  Занимаюсь версткой и 3d графикой.   
+                    <p> Привет! Меня зовут Рамазан мне 22 год. Проживаю я в городе Каспийск.  Занимаюсь frontend-разработкой.   
                         С 2022 года веду телеграмм, для своих одногруппников с ДГУ о различных своих проектах. 
-                        Стремлюсь стать профессиональным специолистом во frontend-разработке и CG. 
+                        Стремлюсь стать профессиональным специолистом во frontend-разработке. 
                         </p>
                   
                 </div>
-                <a class="btn" href="#" data-modal="#modal_hire_me">Нанять меня</a>
+                <a class="btn" href="#" data-modal="#modal_hire_me">Оставить заявку</a>
                 <button class="btn" type="button" data-modal="#modal_resume">МОЕ РЕЗЮМЕ</button>
             </div><!-- /.about__content -->
         </div><!-- /.about__inner -->
